# corgi-filesystem

./: CMakeLists.txt  install.bat
cmake/: Config.cmake.in
include/corgi/filesystem/: FileSystem.h
src/: Document.cpp  FileSystem.cpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  tests_main.cpp
